--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -1,10 +1,11 @@
 version: "3"
 services:
   web:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: ./Dockerfile
     ports:
       - "3000:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./live:/usr/share/nginx/html
+      - ./design/dist:/usr/share/nginx/html
     restart: unless-stopped
