--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 version: "3"
 services:
   web:
-    image: nginx:alpine
-    volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./live:/usr/share/nginx/html
+    build:
+      context: .
+      dockerfile: ./Dockerfile
     environment:
       - VIRTUAL_PORT=80
       - VIRTUAL_HOST=url.emith.dev
