--- a/nginx.conf
+++ b/nginx.conf
@@ -1,10 +1,15 @@
 server {
-  root /usr/share/nginx/html;
-  index index.html;
+  listen 80;
 
   client_max_body_size 5M;
 
-  rewrite ^([^.]*[^/])$ $scheme://$host$1/ permanent;
+  root /usr/share/nginx/html;
+  index index.html;
+
+  location = /favicon.ico { 
+      access_log off; 
+      log_not_found off; 
+  }
 
   location / {
     try_files $uri $uri/ =404;
@@ -14,7 +19,6 @@ server {
   # location /test-url/ {
   #   try_files /test-url.html =404;
   # }
-
 
   location /images/ {
       alias /usr/share/nginx/html/images/;
