--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -2,10 +2,10 @@ version: "3"
 services:
   web:
     build:
-      context: .
+      context: ./www
       dockerfile: ./Dockerfile
     ports:
       - "3000:80"
     volumes:
-      - ./design/dist:/usr/share/nginx/html
+      - ./www/design/dist:/usr/share/nginx/html
     restart: unless-stopped
