--- a/www/design/package.json
+++ b/www/design/package.json
@@ -1,38 +1,45 @@
 {
-  "name": "web-template-min",
-  "version": "1.1.0",
-  "description": "",
+  "name": "templates-basic-web",
+  "version": "1.3.0",
+  "description": "A basic sass website template.",
   "main": "index.js",
-  "scripts": {
-    "build": "gulp build",
-    "browser": "gulp browser-watch"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "repository": "https://github.com/EMiTh-creations/templates-basic-web",
+  "author": "emilyjt",
+  "license": "MIT",
+  "private": true,
+  "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
+    "@hail2u/css-mqpacker": "github:hail2u/node-css-mqpacker#8.0.1",
+    "autoprefixer": "^10.1.0",
     "browser-sync": "^2.26.13",
-    "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-cache": "^1.1.3",
     "gulp-changed": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
-    "gulp-load-plugins": "^2.0.5",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-sass": "^4.1.0",
-    "gulp-terser": "^1.4.1",
+    "gulp-terser": "^2.0.0",
+    "imagemin-giflossy": "^5.1.10",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.1",
-    "postcss-uncss": "^0.17.0",
-    "uncss": "^0.17.3"
+    "imagemin-zopfli": "^7.0.0",
+    "node-sass": "^5.0.0",
+    "postcss": "8.1.0"
   },
+  "scripts": {
+    "build": "gulp build",
+    "browser": "gulp dev"
+  },
+
   "browserslist": [
     "last 2 versions",
     "ie >= 9",
-    "android >= 4.4",
-    "ios >= 7"
+    "Android >= 4.4",
+    "ChromeAndroid > 20",
+    "FirefoxAndroid > 20",
+    "iOS >= 8"
   ]
 }
