--- a/www/design/package.json
+++ b/www/design/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "@hail2u/css-mqpacker": "github:hail2u/node-css-mqpacker#8.0.1",
+    "@hail2u/css-mqpacker": "github:hail2u/node-css-mqpacker#v8.0.1",
     "autoprefixer": "^10.1.0",
     "browser-sync": "^2.26.13",
     "cssnano": "^4.1.10",
@@ -33,7 +33,6 @@
     "build": "gulp build",
     "browser": "gulp dev"
   },
-
   "browserslist": [
     "last 2 versions",
     "ie >= 9",
